// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders the app as expected 1`] = `
<h1
  data-testid="app-title"
>
  Hello World
</h1>
`;

exports[`Link changes the class when hovered 1`] = `
<h1>
  Hello World
</h1>
`;
